# Creation-Kit-Platform-Extended

./: .gitignore  .gitmodules  Creation Kit Platform Extended.sln  CreationKitPlatformExtended.ini  README.md  __CreateDatabase.bat  __CreateDatabase_1_10_162_0.bat  __CreateDatabase_1_5_3_0.bat  __CreateDatabase_1_5_73_0.bat  __CreateDatabase_1_6_1130_0.bat  __CreateDatabase_1_6_438_0.bat  __ExtractFromDatabase.bat  __UpdateDatabase.bat  __UpdateDatabase_1_5_3_0.bat
.github/workflows/: msbuild.yml
CKPE/: CKPE.vcxproj  CKPE.vcxproj.filters  build_version.txt  dllmain.cpp  resource_version.aps  resource_version.rc  resource_version2.h
CKPE.Common/: CKPE.Common.vcxproj  CKPE.Common.vcxproj.filters  build_version.txt  dllmain.cpp  resource.aps  resource.h  resource.rc  resource_version.h  resource_version.rc  resource_version2.h  resource_version2.tmp
CKPE.Common/Include/: CKPE.Common.AboutWindow.h  CKPE.Common.ClassicTheme.h  CKPE.Common.Common.h  CKPE.Common.CrashHandler.h  CKPE.Common.CreatePatterns.h  CKPE.Common.D3D11Proxy.h  CKPE.Common.DialogManager.h  CKPE.Common.Docking.h  CKPE.Common.EditorUI.h  CKPE.Common.FormInfoOutputWindow.h  CKPE.Common.GenerateTableID.h  CKPE.Common.Include.h  CKPE.Common.Interface.h  CKPE.Common.KillerGuardMalware.h  CKPE.Common.LogWindow.h  CKPE.Common.MemoryManager.h  CKPE.Common.ModernTheme.h  CKPE.Common.Patch.h  CKPE.Common.PatchBaseWindow.h  CKPE.Common.PatchManager.h  CKPE.Common.ProgressTaskBar.h  CKPE.Common.RTTI.h  CKPE.Common.Registry.h  CKPE.Common.Relocator.h  CKPE.Common.RelocatorDB.h  CKPE.Common.RuntimeOptimization.h  CKPE.Common.SafeExit.h  CKPE.Common.SettingCollection.h  CKPE.Common.TableID.h  CKPE.Common.Threads.h  CKPE.Common.UIBaseWindow.h  CKPE.Common.UICheckBox.h  CKPE.Common.UICheckboxControl.h  CKPE.Common.UIColored.h  CKPE.Common.UIComboBox.h  CKPE.Common.UICustomBox.h  (+23 more)
CKPE.Fallout4/: CKPE.Fallout4.vcxproj  CKPE.Fallout4.vcxproj.filters  build_version.txt  dllmain.cpp  resource.rc  resource_version.rc  resource_version2.h  resource_version2.tmp
CKPE.Installer/: CKPE.Installer.ApplicationVersion.pas  CKPE.Installer.lpi  CKPE.Installer.lpr  CKPE.Installer.lps  CKPE.Installer.res  ckpe.installer.fileversion.pas  ckpe.installer.mainform.pas
CKPE.Loader/: ckpe_loader.aps  ckpe_loader.vcxproj  resource.h
CKPE.PluginAPI/: CKPE.PluginAPI.vcxproj  CKPE.PluginAPI.vcxproj.filters  build_version.txt  resource_version.h  resource_version2.h  resource_version2.tmp
CKPE.SkyrimSE/: CKPE.SkyrimSE.vcxproj  CKPE.SkyrimSE.vcxproj.filters  build_version.txt  dllmain.cpp  resource.aps  resource.h  resource_version.aps  resource_version.rc  resource_version2.h
CKPE.Starfield/: CKPE.Starfield.vcxproj  CKPE.Starfield.vcxproj.filters  build_version.txt  dllmain.cpp  resource_version2.h  resource_version2.tmp  scripts.ps1
CKPE.WinHttp/: CKPE.SteamAPI.Config.h  CKPE.SteamAPI.cpp  CKPE.SteamAPI.h  CKPE.WinHttp.Native.cpp  CKPE.WinHttp.Native.h  CKPE.WinHttp.vcxproj  CKPE.WinHttp.vcxproj.filters  build_version.txt  dllmain.cpp  exports.cpp  resource_version2.h  resource_version2.tmp
Creation Kit Platform Extended Core/: Common.h  CoreRes.aps  CoreRes.rc  Crc32.cpp  Crc32.h  Creation Kit Platform Extended Core.vcxproj  Creation Kit Platform Extended Core.vcxproj.filters  DllMain.cpp  FileUtil.cpp  FileUtil.h  ProfileUtil.cpp  ProfileUtil.h  StringUtil.cpp  StringUtil.h  Types.h  UtfStr.cpp  UtfStr.h  Utils.cpp  Utils.h  resource.h
Creation Kit Platform Extended Loader/: ckpe_loader.aps  ckpe_loader.cpp  ckpe_loader.rc  ckpe_loader.vcxproj  ckpe_loader.vcxproj.filters
Dependencies/: Toml.vcxproj  Toml.vcxproj.filters  Zipper.vcxproj  Zipper.vcxproj.filters  detours.vcxproj  libdeflate.vcxproj  libdeflate.vcxproj.filters  libzydis.vcxproj  libzydis.vcxproj.filters
Memory Manager/: LICENSE  build_version.txt  dllmain.cpp  resource.aps  resource.h  resource.rc  scripts.ps1  version.h  version.tmp  vmm.vcxproj  vmm.vcxproj.filters
MyFirstPlugin/: MyFirstPlugin.vcxproj  MyFirstPlugin.vcxproj.filters  README.md  dllmain.cpp
NoSteam Patcher/: main.lfm  main.pas  patcher.lpi  patcher.lpr  patcher.lps  patcher.res
Offsets Transfer/: offset_transfer.lpi  offset_transfer.lpr
Resources/: FXAA_PS.cso  FXAA_VS.cso  TAA_PS.cso  about.psd  aboutf4.psd  aboutsf.psd  aboutwnd.psd  ckpe_book.psd  ckpe_contur.psb  ckpe_ico.psd  logo.psd  qtresource.qrc  scripts.psd  storymanager.psd
Shaders/: FXAA_PS.hlsl  FXAA_VS.hlsl  TAA_PS.hlsl
Stuffs/: __CreateDatabase_1_10_162_0.bat  __CreateDatabase_1_5_3_0.bat  __CreateDatabase_1_5_73_0.bat  __CreateDatabase_1_6_1130_0.bat  __CreateDatabase_1_6_438_0.bat  __CreateDatabase_f4_1_10_162_0.bat  __CreateDatabase_f4_1_10_943_1.bat  __CreateDatabase_f4_1_10_982_3.bat  __CreateDatabase_f4_1_11_137.bat  __CreateDatabase_sse_1_5_3_0.bat  __CreateDatabase_sse_1_5_73_0.bat  __CreateDatabase_sse_1_6_1130_0.bat  __CreateDatabase_sse_1_6_1378_1.bat  __CreateDatabase_sse_1_6_438_0.bat  __CreateEmptyDatabase.bat  __ExtractRTTI.bat  __QtUpdateResources.bat  __RemoveFromDatabase.bat  __UpdateDatabase_f4_1_10_162_0.bat  __UpdateDatabase_f4_1_10_943_1.bat  __UpdateDatabase_f4_1_10_982_3.bat  __UpdateDatabase_f4_1_11_137.bat  __UpdateDatabase_sf_1_16_236_0.bat  __UpdateDatabase_sf_1_16_244_0.bat  __UpdateDatabase_sse_1_5_3_0.bat  __UpdateDatabase_sse_1_5_73_0.bat  __UpdateDatabase_sse_1_6_1130_0.bat  __UpdateDatabase_sse_1_6_438_0.bat  hotkey_f4_1_10_162.txt  hotkey_f4_1_10_943_1.txt  hotkey_f4_1_10_982_3.txt  rtti_f4_1_10_162.txt  rtti_f4_1_10_943_1.txt  rtti_f4_1_10_982_3.txt  rtti_f4_1_11_137.txt  rtti_se_1_5_3.txt  rtti_se_1_5_73.txt  rtti_se_1_6_1130.txt  rtti_se_1_6_1378_1.txt  rtti_se_1_6_438.txt  (+2 more)
Unicode Plugin/: UnicodePlugin.lpi  UnicodePlugin.lpr  UnicodePlugin.lps  UnicodePlugin.res
Zipper/: Zipper.vcxproj
cmake/: msvc-wine-toolchain.cmake
linux-build/: CMakeLists.txt  CMakePresets.json  README.md  bootstrap-msvc-wine.sh
linux-build/shim/: qt5_stdext_compat.h
rc2json/: rc2json.cpp  rc2json.vcxproj
sseck_loader/: resource.h  sseck_loader.cpp  sseck_loader.rc  sseck_loader.vcxproj
(+3266 files in other folders)
